problem solved, some refactoring